# GeodesicsInHeat-libigl

./: CMakeLists.txt  README.md
GeodesicInHeat/include/: GeodesicInHeat.h
GeodesicInHeat/src/: main.cpp
include/: TriangleMesh.h
src/: GeodesicInHeat.cpp  TriangleMesh.cpp
